<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CA\'NIM</string>
    <string name="app_tagline">Lacak Anime dan Manga</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_library">Library</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_search">Cari</string>
    <string name="nav_settings">Pengaturan</string>
    <string name="status_watching">Sedang Menonton</string>
    <string name="status_reading">Sedang Membaca</string>
    <string name="status_completed">Selesai</string>
    <string name="status_on_hold">Ditunda</string>
    <string name="status_dropped">Ditinggalkan</string>
    <string name="status_plan_to_watch">Rencana Tonton</string>
    <string name="status_plan_to_read">Rencana Baca</string>
    <string name="widget_watching_description">Lacak dan tambah episode anime yang sedang ditonton langsung dari layar utama.</string>
    <string name="widget_airing_description">Jadwal tayang episode anime hari ini berdasarkan waktu lokal Anda.</string>
    <string name="widget_watching_title">Sedang Menonton</string>
    <string name="widget_today_airing_title">Tayang Hari Ini</string>
    <string name="widget_no_watching">Tidak ada anime yang sedang ditonton</string>
    <string name="widget_no_airing">Tidak ada jadwal rilis anime hari ini</string>
    <string name="widget_quick_add">+1 Ep</string>
</resources>
